Remove maven 2 output parsing, cleanup and some parsing fixes
 - remove maven 2 specific output parsing
 - fix reactor summary parsing
 - disabled JavadocOutputProcessor since it doesn't do anything atm
 - OutputListener has now no-op default methods
 - code cleanup